RESOLVED FIXED245565
Thread safety analysis can not use assertion that a RunLoop is current
https://bugs.webkit.org/show_bug.cgi?id=245565
Summary Thread safety analysis can not use assertion that a RunLoop is current
Kimmo Kinnunen
Reported 2022-09-23 00:53:39 PDT
ThreadSafetyAnalysis can not use assertion that a RunLoop is current
Attachments
Radar WebKit Bug Importer
Comment 1 2022-09-23 00:53:49 PDT
Kimmo Kinnunen
Comment 2 2022-09-23 01:52:33 PDT
EWS
Comment 3 2022-09-26 04:59:18 PDT
Committed 254856@main (7ff01e452a8c): <https://commits.webkit.org/254856@main> Reviewed commits have been landed. Closing PR #4622 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.