Thread safety analysis can not use assertion that a RunLoop is current https://bugs.webkit.org/show_bug.cgi?id=245565 rdar://problem/100313515

Reviewed by Antti Koivisto.

Make it possible to assert that a run loop is current by using
assertIsCurrent(m_runLoop);

This enables thread safety analysis to enforce that a particular access is allowed
only on a particular run loop.

* Source/WTF/wtf/RunLoop.h:
(WTF::WTF_ASSERTS_ACQUIRED_CAPABILITY):
* Tools/TestWebKitAPI/Tests/WTF/RunLoop.cpp:
(TestWebKitAPI::TEST):

Canonical link: https://commits.webkit.org/254856@main